============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.2 - not yet released
* devices
  - Android IOIO
  - added task declaration support for the IMI ERIXX logger
  - improved support for the Digifly Leonardo
  - auto-detect serial ports on Windows CE
  - serial port support on UNIX
  - CAI302: fix byte order bug on PC
  - CAI302: IGC file download
  - IMI ERIXX: IGC file download
  - LX/Colibri: IGC file download
  - LX: support baud rate switching
  - Volkslogger: fix task declaration on PC
  - Vega: update vario when there is no GPS fix
  - PosiGraph: task declaration
  - device declaration can be cancelled
  - reconnect individual devices after failure or timeout
* calculations
  - dry mass is seperated from the polar reference mass
* user interface
  - added support for reverse portrait/landscape screen orientations
  - multiple flarm team mates and teams possible
* map
  - redraw terrain only if needed
  - airspace rendering optimised

Version 6.1.4 - 2011/07/30
* memory leaks fixed
* calculations
  - fix miscalculation in start point chooser
  - finish: revert "allow flight to boundary" for now
* map
  - fix for the aircraft symbol
  - airspace rendering optimised
  - disable huge topography files on PPC2000 and Altair
* Android
  - fix text rendering on Adreno GPUs
  - fix another suspend/resume crash
  - clip the unit symbol in info boxes
  - smooth CPU usage info box
* Altair:
  - fix upside down screen

Version 6.1.3 - 2011/07/14
* devices
  - fix task declaration on PC
  - LX: correct byte alignment for task declaration
* calculations
  - reduce memory usage
  - finish: allow flight to boundary
  - Racing task, FAI Task: allow 11 turnpoints
  - task: support AGL maximum start height
* user interface
  - translation updates
  - new translations: Japanese, Ukrainian
  - support mouse wheel on Linux